--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-auth.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
          https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-analytics.js"></script>
@@ -35,7 +36,7 @@
       rel="stylesheet"
       href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
     />
-    
+
   </head>
   <body>
     <div class="landing">
@@ -53,7 +54,7 @@
 
       <p>this will be mentioned as thedigitalcard.me/example_123</p>
     </div>
-    <div></div>
+    <div id="firebaseui-auth-container"></div>
 
     <script src="index.js"></script>
   </body>
