--- a/design1.html
+++ b/design1.html
@@ -30,11 +30,11 @@
 
     <div class="social details">
         <p class="heading social-heading">Socials</p>
-        <a href="https://api.whatsapp.com/send?phone=918668784420"><p class = "social-handles whatsapp"><img src="icons/whatsapp.png" class="social-icon" alt="">/8668784420</p></a>
-        <a href="https://www.facebook.com/rishab.munot.9"><p class = "social-handles facebook"><img src="icons/facebook.png" class="social-icon" alt="">/rishab.munot.9</p></a>
-        <a href="https://www.instagram.com/munotrishab/"><p class = "social-handles instagram"><img src="icons/instagram.png" class="social-icon" alt="">/munotrishab</p></a>
-        <a href="https://www.linkedin.com/in/rishab-munot-40a22b16b/"><p class = "social-handles linkedin"><img src="icons/linkedin.png" class="social-icon" alt="">/rishab-munot-40a22b16b</p></a>
-        <a href="https://twitter.com/RishabMunot"><p class = "social-handles twitter"><img src="icons/twitter.png" class="social-icon" alt="">/RishabMunot</p></a>
+        <a class = "whatsapp" href="https://api.whatsapp.com/send?phone=918668784420"><p class = "social-handles whatsapp"><img src="icons/whatsapp.png" class="social-icon" alt="">/8668784420</p></a>
+        <a class = "facebook" href="https://www.facebook.com/rishab.munot.9"><p class = "social-handles facebook"><img src="icons/facebook.png" class="social-icon" alt="">/rishab.munot.9</p></a>
+        <a class = "instagram" href="https://www.instagram.com/munotrishab/"><p class = "social-handles instagram"><img src="icons/instagram.png" class="social-icon" alt="">/munotrishab</p></a>
+        <a class = "linkedin" href="https://www.linkedin.com/in/rishab-munot-40a22b16b/"><p class = "social-handles linkedin"><img src="icons/linkedin.png" class="social-icon" alt="">/rishab-munot-40a22b16b</p></a>
+        <a class = "twitter" href="https://twitter.com/RishabMunot"><p class = "social-handles twitter"><img src="icons/twitter.png" class="social-icon" alt="">/RishabMunot</p></a>
     </div>
 
     <div class="hello">
